GNOME Bugzilla – Bug 746547
file descriptor leak in gsd-print-notifications-manager.c
Last modified: 2015-09-22 15:37:46 UTC
Created attachment 299985 [details] [review] patch to add missing httpClose() calls There are three places in gsd-print-notifications-manager.c where httpConnectEncrypt() is called, but only in one place httpClose() is also called. However, httpClose() will close the file descriptor with the network connection as part of the cleanup. With several network printers, this resulted in a leak of >1000 TCP connections which eventually ended in the CLOSE-WAIT state for me. Adding the missing httpClose() calls seems to have solved the problem for me; the patch against version 3.14.2 (as in Debian) is attached. From looking at Git master, the problem should still be present. See also the bug report in Debian for a few more details. Bug-Debian: https://bugs.debian.org/780856
looks like a good candidate for backporting to 3.14
Hi Ansgar, thank you very much for catching this. I've pushed the patch into gnome-3-14 branch for now and will push it to master/gnome-3-16 once the hard code freeze is over (probably tomorrow).
the 3.16.0 release is out, so please push it to the stable branches
OK, I've pushed it to master. It will get to gnome-3-16 branch once it is created.
the branch is called gtk-3-16
(In reply to Matthias Clasen from comment #5) > the branch is called gtk-3-16 This a gnome-settings-daemon bug. I see there only gnome-*-* branches for stable releases.
oh, ignore me when I'm sputtering nonsense...