print-notifications: Close HTTP connections

Don't leak HTTP connections when getting information
about a print job or when cancelling a subscription.

https://bugzilla.gnome.org/show_bug.cgi?id=746547