plugins/print-notifications/gsd-print-notifications-manager.c
@@ -443,6 +443,7 @@ process_cups_notification (GsdPrintNotificationsManager *manager,
                                 ippDelete(response);
                         }
                         g_free (job_uri);
+                        httpClose (http);
                 }
         }
 
@@ -1040,6 +1041,7 @@ cancel_subscription (gint id)
                 ippAddInteger (request, IPP_TAG_OPERATION, IPP_TAG_INTEGER,
                               "notify-subscription-id", id);
                 ippDelete (cupsDoRequest (http, request, "/"));
+                httpClose (http);
         }
 }
 
